--- a/TestTaringa.css
+++ b/TestTaringa.css
@@ -228,6 +228,17 @@ li{
 }
 
 
+@media screen and (max-width: 1024px) {
+
+	#main-container{
+		top					: 0px;
+		left				: 0px;
+		width				: 100%;
+		height				: 100%;
+	}
+
+}
+
 
 
 
